--- a/sample_nbs/naive_rag0.ipynb
+++ b/sample_nbs/naive_rag0.ipynb
@@ -1252,8 +1252,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "template1 = (\"Your name is AskBio. You are AI chatbot who can answer question by using provided context information from book named Concepts of Biology\"\n",
     "            \"Be more specific and do not facricate the answers.\\n\" \n",
     "            \"If you are unsure about answer, please ask for clarfications.\\n\"\n",
@@ -1261,7 +1259,7 @@
     "            \"-------------------------------------------\\n\"\n",
     "            \"{context_str}\" \n",
     "            \"\\n -------------------------------------------\\n\"\n",
-    "            \"Given this information, please answer user questions: {query_str} \\n\")\n",
+    "            \"Given this information, please answer user question: {query_str} \\n\")\n",
     "qa_template1 = PromptTemplate(template1)\n"
    ]
   },
