--- a/sample_nbs/naive_rag_colab.ipynb
+++ b/sample_nbs/naive_rag_colab.ipynb
@@ -1,89 +1,87 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/MeAmarP/askbio/blob/1dd8de8e586e2bdb779059ae42914ae5f00351e6/sample_nbs/naive_rag_colab.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1z4KEGL1DGEc"
+      },
+      "outputs": [],
       "source": [
         "!pip install -q transformers\n",
         "!pip -q install sentence-transformers\n",
         "!pip install -q llama-index\n",
         "!pip install llama-index-llms-huggingface\n",
         "!pip install llama-index-embeddings-huggingface"
-      ],
-      "metadata": {
-        "id": "1z4KEGL1DGEc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uc9AHs0hEgpN"
+      },
+      "outputs": [],
       "source": [
         "!pip3 install torch torchvision torchaudio\n",
         "!pip install accelerate\n",
         "!pip install -i https://pypi.org/simple/ bitsandbytes"
-      ],
-      "metadata": {
-        "id": "uc9AHs0hEgpN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pymupdf\n",
-        "!pip install python-dotenv"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "hX2k_1dhKwQ4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install pymupdf\n",
+        "!pip install python-dotenv"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "t7-L-EKzKsAo"
+      },
+      "outputs": [],
       "source": [
         "import fitz  # PyMuPDF\n",
         "import os\n",
         "import torch\n",
         "from dotenv import load_dotenv, find_dotenv"
-      ],
-      "metadata": {
-        "id": "t7-L-EKzKsAo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import nest_asyncio\n",
-        "nest_asyncio.apply()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "bH3YXMgSP4Bn"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import nest_asyncio\n",
+        "nest_asyncio.apply()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qpjkOWSULDet"
+      },
+      "outputs": [],
       "source": [
         "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
         "from llama_index.llms.huggingface import HuggingFaceInferenceAPI\n",
@@ -94,15 +92,15 @@
         "from llama_index.core import VectorStoreIndex\n",
         "from llama_index.core.evaluation import DatasetGenerator, RelevancyEvaluator\n",
         "from llama_index.core import PromptTemplate"
-      ],
-      "metadata": {
-        "id": "qpjkOWSULDet"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kw10RdyjNw3A"
+      },
+      "outputs": [],
       "source": [
         "# Lets Download PDF file\n",
         "# Keep this PDF file in new-dir named \"/data\"\n",
@@ -110,15 +108,15 @@
         "# We are going to create a sample PDF file from this which has only 2 chapters.\n",
         "\n",
         "!wget https://assets.openstax.org/oscms-prodcms/media/documents/ConceptsofBiology-WEB.pdf"
-      ],
-      "metadata": {
-        "id": "kw10RdyjNw3A"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xUZH5CD9MCd8"
+      },
+      "outputs": [],
       "source": [
         "# Create a sample pdf for ch1,2\n",
         "def save_page_ranges(source_pdf_path, output_pdf_path, page_ranges):\n",
@@ -153,41 +151,41 @@
         "# pass range of pages to extract\n",
         "page_ranges = [(18, 38), (40, 66)]\n",
         "save_page_ranges(source_pdf_path, output_pdf_path, page_ranges)\n"
-      ],
-      "metadata": {
-        "id": "xUZH5CD9MCd8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hh8p6Cl0MEvR"
+      },
+      "outputs": [],
       "source": [
         "# \"BAAI/bge-large-en-v1.5\" --> Embedding Dimensions = 1024 | Max Tokens = 512.\n",
         "embed_model = HuggingFaceEmbedding(model_name=\"BAAI/bge-large-en-v1.5\",\n",
         "                                   device=('cuda' if torch.cuda.is_available() else 'cpu'))"
-      ],
-      "metadata": {
-        "id": "hh8p6Cl0MEvR"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "S_OX7KlxMObc"
+      },
+      "outputs": [],
       "source": [
         "# Check embedding model\n",
         "embeddings = embed_model.get_text_embedding(\"Hello World!\")\n",
         "print(len(embeddings))"
-      ],
-      "metadata": {
-        "id": "S_OX7KlxMObc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "M89Y-VBJAZb4"
+      },
+      "outputs": [],
       "source": [
         "from llama_index.llms.huggingface import HuggingFaceLLM\n",
         "\n",
@@ -242,15 +240,15 @@
         "\n",
         "response = llm.complete(\"What is the meaning of life?\")\n",
         "print(str(response))"
-      ],
-      "metadata": {
-        "id": "M89Y-VBJAZb4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "82NzEzhYHONg"
+      },
+      "outputs": [],
       "source": [
         "# Converts pdf file into Documents objects for llama-index\n",
         "loader = SimpleDirectoryReader(\n",
@@ -260,102 +258,102 @@
         ")\n",
         "\n",
         "documents = loader.load_data()"
-      ],
-      "metadata": {
-        "id": "82NzEzhYHONg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "documents[5]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "3rYKPjAXPkFV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "documents[5]"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4ub7wkj8Po--"
+      },
+      "outputs": [],
       "source": [
         "# Split the loaded documents\n",
         "splitter = SentenceSplitter(chunk_size=512,chunk_overlap=64)\n",
         "nodes = splitter.get_nodes_from_documents(documents)"
-      ],
-      "metadata": {
-        "id": "4ub7wkj8Po--"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CVSogZOYPvT4"
+      },
+      "outputs": [],
       "source": [
         "index0 = VectorStoreIndex(nodes=nodes,\n",
         "                          use_async=True,\n",
         "                          embed_model=embed_model,\n",
         "                          show_progress=True)"
-      ],
-      "metadata": {
-        "id": "CVSogZOYPvT4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "query_engine0 = index0.as_query_engine(llm=llm)\n",
-        "print(query_engine0.query(\"The type of logical thinking that uses related observations to arrive at a general conclusion is called?\"))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "UMnBymvSP74x"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "query_engine0 = index0.as_query_engine(llm=llm)\n",
+        "print(query_engine0.query(\"The type of logical thinking that uses related observations to arrive at a general conclusion is called?\"))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "s0JDnw96QHHB"
+      },
+      "outputs": [],
       "source": [
         "data_gen = DatasetGenerator(nodes=nodes,\n",
         "                            llm=llm,\n",
         "                            num_questions_per_chunk=2,\n",
         "                            question_gen_query=\"Generate 2 questions per chunk.Restrict the questions to the context information provided.\")"
-      ],
-      "metadata": {
-        "id": "s0JDnw96QHHB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "eval_questions = data_gen.generate_questions_from_nodes()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "PBNwSxnRWX-z"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "eval_questions = data_gen.generate_questions_from_nodes()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "eval_questions_updated = [q for q in eval_questions if (\"How\" in q or \"What\" in q and not (\"pdf\" in q or \"PDF\" in q))]\n",
-        "len(eval_questions_updated)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "MCgb2G27WaaB"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "eval_questions_updated = [q for q in eval_questions if (\"How\" in q or \"What\" in q and not (\"pdf\" in q or \"PDF\" in q))]\n",
+        "len(eval_questions_updated)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6_ANJEWYYUGL"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "import json\n",
@@ -369,21 +367,32 @@
         "    print(f\" q --> {q} score --> {eval_result['score']}\")\n",
         "\n",
         "# print(f\"Q --> {ques} \\nsource --> {ques_response.source_nodes[0].node.get_content()} \\neval_result --> {eval_result}\\n\")"
-      ],
-      "metadata": {
-        "id": "6_ANJEWYYUGL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "Y6nCE-dWYawc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
